# Lumina

./: README.md  SKILLS.md  out.txt  stdout.txt
.omo/run-continuation/: ses_19052dccfffeS7kIBnxJcqnxHg.json  ses_195ce14c2ffeu7fDtRvXThZsND.json  ses_19d62a615ffewDETN15A4FCd6N.json  ses_1a1669a9cffeCU6Z0bmNGZIesn.json
lumina/: README.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
lumina/src/: app.css  app.d.ts  app.html  hooks.client.ts  hooks.server.ts
lumina/src-tauri/: Cargo.toml  tauri.conf.json
lumina/src-tauri/capabilities/: default.json
lumina/src-tauri/src/: lib.rs  youtube.rs
lumina/src-tauri/src/audio/: engine.rs  mod.rs
lumina/src-tauri/src/database/: migrations.rs  mod.rs  models.rs  queries.rs
lumina/src-tauri/src/utils/: artwork.rs
lumina/src/lib/audio/: engine.ts
lumina/src/lib/commands/: audio.ts  library.ts  youtube.ts
lumina/src/lib/components/: Icon.svelte
lumina/src/lib/components/glass/: ContextMenu.svelte  GlassButton.svelte  GlassCard.svelte  GlassModal.svelte  GlassSlider.svelte  GlassToggle.svelte
lumina/src/lib/components/layout/: PlayerBar.svelte  Sidebar.svelte  Titlebar.svelte
lumina/src/lib/config/: api.ts
lumina/src/lib/controllers/: library.ts
lumina/src/lib/db/: index.ts  queries.ts  sql.js.d.ts
lumina/src/lib/scanner/: index.ts
lumina/src/lib/stores/: api.ts  library.ts  lyrics.ts  player.ts  playlists.ts  queue.ts  theme.ts  ui.ts
lumina/src/lib/types/: index.ts
lumina/src/lib/utils/: artwork.ts  persist.ts
lumina/src/routes/: +error.svelte  +layout.svelte  +page.svelte
(+12 files in other folders)
