[package]
name = "lumina"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lumina_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
rodio = { version = "0.22.2", features = ["symphonia-all"] }
symphonia = { version = "0.5.5", features = ["all"] }
lofty = "0.24.0"
walkdir = "2.5.0"
rayon = "1.12.0"
notify = "8.2.0"
base64 = "0.22.1"
once_cell = "1.21.4"
parking_lot = "0.12.5"
uuid = { version = "1.23.1", features = ["v4", "v5"] }
directories = "6.0.0"
tokio = { version = "1.52.3", features = ["full"] }
chrono = "0.4.44"
rusty_ytdl = "0.7.4"

